--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("backgrounds/index.png");
+  background-image: url("index.png");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
