--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("index.png");
+  background-image: url("https://cdn.discordapp.com/attachments/1148213147031847072/1148213219463274566/index.png");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
