--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .pudlo {
@@ -13,6 +17,8 @@ body {
   max-width: 600px;
   min-height: 630px;
   overflow: hidden;
+  text-align: center;
+  position: absolute;
 }
 
 h1 {
