--- a/style-mobile.css
+++ b/style-mobile.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("background/index.jpg");
+  background-image: url("background/index1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
