--- a/style-desktop.css
+++ b/style-desktop.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("background/index1.jpg");
+  background-image: url("background/index.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0px;
@@ -10,7 +10,7 @@ body {
 }
 
 .pudlo {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.65);
   padding: 20px;
   border-radius: 50px;
   margin: 50px auto;
